remove border around radio label on focus

--- a/browser/themes/gnomestripe/devtools/toolbox.css
+++ b/browser/themes/gnomestripe/devtools/toolbox.css
@@ -153,6 +153,7 @@ window {
 
 .devtools-tab > .radio-label-center-box > .radio-label-box {
   -moz-appearance: none;
+  border: none;
   padding: 0 16px;
 }
 
